--- a/android/apollo/res/values/strings.xml
+++ b/android/apollo/res/values/strings.xml
@@ -18,6 +18,9 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Page titles -->
+    <string name="application_label" translatable="false">SnapLoad</string>
+
+    <!-- Page titles -->
     <string name="page_last_added">Last Added</string>
     <string name="page_playlists">Playlists</string>
     <string name="page_recent">Recent</string>
